--- a/src/app/components/filters/filter-tree/filter-tree.component.css
+++ b/src/app/components/filters/filter-tree/filter-tree.component.css
@@ -16,7 +16,6 @@ mat-card {
 
 mat-card-content {
   width: 220px;
-  height: 50px;
 }
 
 .short200 {
@@ -31,11 +30,6 @@ mat-card-content {
   rotation: revert;
 }
 
-.drawer-sidenav {
-  width: 220px;
-  background-color: #eeeeee;
-}
-
 button.dataFilterCollapse {
   border: 1px solid #e0e0e0;
   border-radius: 5px;
@@ -45,15 +39,14 @@ button.dataFilterCollapse {
 }
 
 mat-card-actions {
-  padding-left: 15%;
+
 }
 
 mat-card-header {
- width: 160px;
+ justify-content: space-between;
 }
 
-.AndOrNotBtn {
-  border: 1px solid #e0e0e0;
+button.AndOrNotBtn {
   border-radius: 5px;
   height: 30px;
   text-align: center;
@@ -61,9 +54,15 @@ mat-card-header {
 }
 
 mat-card-content, mat-card-title {
-  padding-top: 10px;
+
 }
+
+
 
 .SearchFilterTree {
   height: 24px;
+}
+
+.filterItems {
+  justify-content: space-between;
 }
