filter tree item and or not btn

--- a/src/app/components/filters/FilterTreeItem.component.html
+++ b/src/app/components/filters/FilterTreeItem.component.html
@@ -1,4 +1,6 @@
-<p>filters works!</p>
-<mat-tree [dataSource]="dataSource">
 
-</mat-tree>
+<mat-button-toggle-group>
+  <mat-button-toggle>AND</mat-button-toggle>
+  <mat-button-toggle>OR</mat-button-toggle>
+  <mat-button-toggle>NOT</mat-button-toggle>
+</mat-button-toggle-group>
