--- a/src/app/components/filters/filter-tree/filter-tree.component.css
+++ b/src/app/components/filters/filter-tree/filter-tree.component.css
@@ -24,6 +24,8 @@ mat-card-content {
 
 .spacer {
   flex: 1 1 auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .arrowChange:hover {
@@ -66,3 +68,9 @@ mat-card-content, mat-card-title {
 .filterItems {
   justify-content: space-between;
 }
+
+mat-button-toggle {
+  width: 90px;
+  font-size: small;
+}
+
