--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -23,10 +23,7 @@
 
 <!--todo          toggle between OR and AND-->
 <!--todo          buttons shows on mouseOver-->
-
-        <mat-button-toggle>{{node.andFT}}</mat-button-toggle>
-        <mat-button-toggle>{{node.orFT}}</mat-button-toggle>
-        <mat-button-toggle>{{node.notFT}}</mat-button-toggle>
+        <app-filterTreeItem></app-filterTreeItem>
       </mat-tree-node>
       <!-- This is the tree node template for expandable nodes -->
       <!--      <mat-tree-node *matTreeNodeDef="let node;when: hasChild">-->
