--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -1,25 +1,24 @@
 <mat-card class="FilterTreeItemCard">
 
   <mat-card-header>
-  <mat-card-title>Topics</mat-card-title>
-  <span class="spacer"></span>
-  <button mat-raised-button mat-icon-button class="dataFilterCollapse" (click)="toggleCollapsed()">
-    <mat-icon>keyboard_arrow_down</mat-icon>
-  </button>
+    <mat-card-title>Topics</mat-card-title>
+    <span class="spacer"></span>
+    <button mat-raised-button mat-icon-button class="dataFilterCollapse" (click)="toggleCollapsed()">
+      <mat-icon>keyboard_arrow_down</mat-icon>
+    </button>
   </mat-card-header>
 
   <mat-card-content *ngIf="collapsed" class="searchIcon">
     <div>
-      <mat-icon (click)="searchShow()">search</mat-icon>
-      <app-search class="SearchFilterTree" *ngIf="isSearchShown"></app-search>
+      <button mat-raised-button class="searchFilter"><mat-icon (click)="searchShow()">search</mat-icon></button>
+      <app-search *ngIf="isSearchShown"></app-search>
     </div>
     <mat-tree class="FilterTree" [dataSource]="dataSource" [treeControl]="treeControl">
 
       <mat-tree-node *matTreeNodeDef="let node">
-
-            <span class="spacer">{{node.name}}</span>
-
+        <span class="spacer">{{node.name}}</span>
         <app-filterTreeItem></app-filterTreeItem>
+
       </mat-tree-node>
 
     </mat-tree>
