filter tree item and or not btn

--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -17,10 +17,10 @@
 
       <mat-tree-node *matTreeNodeDef="let node">
         <span class="spacer">{{node.name}}</span>
+
+<!-- ND OR NOT                                                   -->
         <app-filterTreeItem></app-filterTreeItem>
-
       </mat-tree-node>
-
     </mat-tree>
 
   </mat-card-content>
