--- a/src/app/components/filters/datetime-picker/datetime-picker.component.html
+++ b/src/app/components/filters/datetime-picker/datetime-picker.component.html
@@ -73,16 +73,16 @@
   <br />
 
         <mat-grid-list cols="1" rowHeight="20px" gutterSize="5px">
-          <mat-grid-tile class="clickable" (click)="today()" >today
+          <mat-grid-tile class="clickable" (click)="today()" >Today
             <span class="spacer" ></span><span matRipple class="spacer-color">0</span>
           </mat-grid-tile>
-          <mat-grid-tile class="clickable" (click)="yesterday()">yesterday
+          <mat-grid-tile class="clickable" (click)="yesterday()">Yesterday
             <span class="spacer"></span><span matRipple class="spacer-color">0</span>
           </mat-grid-tile>
-          <mat-grid-tile class="clickable" (click)="lastWeek()">last week
+          <mat-grid-tile class="clickable" (click)="lastWeek()">Last Week
             <span class="spacer"></span><span matRipple class="spacer-color">0</span>
           </mat-grid-tile>
-          <mat-grid-tile class="clickable" (click)="lastMonth()">last month
+          <mat-grid-tile class="clickable" (click)="lastMonth()">Last Month
             <span class="spacer"></span><span matRipple class="spacer-color">0</span>
           </mat-grid-tile>
         </mat-grid-list>
