--- a/src/app/components/article-details/article-details.component.html
+++ b/src/app/components/article-details/article-details.component.html
@@ -14,8 +14,5 @@
 </mat-list>
   </mat-expansion-panel>
 </mat-accordion>
-<article>
-  <div>{{article.articleContent}} </div>
-
-</article>
+<article>{{article.articleContent}}</article>
 
