--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -1,3 +1,4 @@
+
 <mat-card class="FilterTreeItemCard">
 
   <mat-card-header>
@@ -16,17 +17,25 @@
     <mat-tree class="FilterTree" [dataSource]="dataSource" [treeControl]="treeControl">
 
       <mat-tree-node *matTreeNodeDef="let node">
-        <span class="spacer">{{node.name}}</span>
+        <mat-card>
+          <div class="AndOrNotBtnHover">
+          <mat-card-title >
+            <span class="spacer">{{node.name}}</span>
+          </mat-card-title>
+          </div>
+          <div class="AndOrNotBtnHide">
 
-<!-- ND OR NOT                                                   -->
+<!-- AND OR NOT buttons                                                 -->
         <app-filterTreeItem></app-filterTreeItem>
+
+          </div>
+        </mat-card>
       </mat-tree-node>
     </mat-tree>
 
   </mat-card-content>
 
 </mat-card>
-
 
 
 <!--<mat-card class="FilterTreeItemCard">-->
