--- a/src/app/pages/Page_1_ArticleDetails/page1.component.html
+++ b/src/app/pages/Page_1_ArticleDetails/page1.component.html
@@ -1,2 +1,3 @@
-<app-article-details></app-article-details>
-
+<div id="customWidthWrapperPage1">
+  <app-article-details></app-article-details>
+</div>
