--- a/src/app/pages/Page_3_DateTimePicker/page3.component.html
+++ b/src/app/pages/Page_3_DateTimePicker/page3.component.html
@@ -1,6 +1,5 @@
-<app-datetime-picker (onRangeSelected)="datePickerData($event)"></app-datetime-picker>
-
-<div>{{dateSelection.dateRangeStart | date: 'EEEE, MMMM d, y,h:mm:ss a zzzz ' }}</div>
-<div>{{dateSelection.dateRangeEnd | date: "full" }}</div>
-
-
+<div id="customWidthWrapperPage3">
+  <app-datetime-picker (onRangeSelected)="datePickerData($event)"></app-datetime-picker>
+  <div>{{dateSelection.dateRangeStart | date: 'EEEE, MMMM d, y,h:mm:ss a zzzz ' }}</div>
+  <div>{{dateSelection.dateRangeEnd | date: "full" }}</div>
+</div>
