filter tree item and or not btn

--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -11,7 +11,7 @@
 
   <mat-card-content *ngIf="collapsed" class="searchIcon">
     <div>
-      <button mat-raised-button class="searchFilter"><mat-icon (click)="searchShow()">search</mat-icon></button>
+      <button mat-raised-button class="searchFilter" (click)="searchShow()"><mat-icon >search</mat-icon></button>
       <app-search *ngIf="isSearchShown"></app-search>
     </div>
     <mat-tree class="FilterTree" [dataSource]="dataSource" [treeControl]="treeControl">
