filter tree item component, separating nodes data

--- a/src/app/components/filters/FilterTreeItem.component.css
+++ b/src/app/components/filters/FilterTreeItem.component.css
@@ -5,3 +5,16 @@ mat-button-toggle {
   font-size: smaller;
   padding-bottom: 25px;
 }
+
+.AndOrNotBtnHide {
+  display: none;
+
+}
+.AndOrNotBtnHover:hover + .AndOrNotBtnHide {
+  display: block;
+
+}
+
+.AndOrNotBtnHide:hover {
+  display: block;
+}
