--- a/src/app/components/filters/FilterTreeItem.component.html
+++ b/src/app/components/filters/FilterTreeItem.component.html
@@ -1,7 +1,11 @@
-
-<mat-button-toggle-group>
+<div class="AndOrNotBtnHover">
+<span>{{item?.name}}</span>
+<span>data.ciunt</span>
+</div>
+<div class="AndOrNotBtnHide">
+  <mat-button-toggle-group>
   <mat-button-toggle>AND</mat-button-toggle>
   <mat-button-toggle>OR</mat-button-toggle>
 </mat-button-toggle-group>
   <mat-button-toggle>NOT</mat-button-toggle>
-
+</div>
