--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -4,34 +4,23 @@
   <mat-card-header>
     <mat-card-title>Topics</mat-card-title>
     <span class="spacer"></span>
-    <button mat-raised-button mat-icon-button class="dataFilterCollapse" (click)="toggleCollapsed()">
-      <mat-icon>keyboard_arrow_down</mat-icon>
-    </button>
+<!--    <button mat-raised-button mat-icon-button class="dataFilterCollapse" (click)="toggleCollapsed()">-->
+<!--      <mat-icon>keyboard_arrow_down</mat-icon>-->
+<!--    </button>-->
   </mat-card-header>
 
-  <mat-card-content *ngIf="collapsed" class="searchIcon">
+  <mat-card-content class="searchIcon">
     <div>
-      <button mat-raised-button class="searchFilter" (click)="searchShow()"><mat-icon >search</mat-icon></button>
+      <button mat-raised-button class="searchFilter" (click)="searchShow()"><mat-icon>search</mat-icon></button>
       <app-search *ngIf="isSearchShown"></app-search>
     </div>
 
     <mat-tree class="FilterTree" [dataSource]="dataSource" [treeControl]="treeControl">
 
       <mat-tree-node *matTreeNodeDef="let node">
-        <mat-card>
-          <div class="AndOrNotBtnHover">
-          <mat-card-title >
-            <span class="spacer">{{node.name}}</span>
-          </mat-card-title>
-          </div>
-          <div class="AndOrNotBtnHide">
-
-<!-- AND OR NOT buttons                                                 -->
-        <app-filterTreeItem></app-filterTreeItem>
-
-          </div>
-        </mat-card>
+            <app-filterTreeItem [item]=""></app-filterTreeItem>
       </mat-tree-node>
+
     </mat-tree>
 
   </mat-card-content>
