filter tree item component, separating nodes data

--- a/src/app/components/filters/FilterTreeItem.component.html
+++ b/src/app/components/filters/FilterTreeItem.component.html
@@ -1,6 +1,7 @@
 <div class="AndOrNotBtnHover">
-<span>{{item?.name}}</span>
-<span>data.ciunt</span>
+<span>{{item.name}}</span>
+  <br/>
+<span>{{item.uuid}}</span>
 </div>
 <div class="AndOrNotBtnHide">
   <mat-button-toggle-group>
