--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -26,7 +26,7 @@
   </mat-card-content>
 
 </mat-card>
-
+<div><button (click)="changeFilterTreeItemArray()">ChangeArray</button></div>
 
 <!--<mat-card class="FilterTreeItemCard">-->
 
