--- a/src/app/components/filters/filter-tree/filter-tree.component.html
+++ b/src/app/components/filters/filter-tree/filter-tree.component.html
@@ -12,13 +12,17 @@
   <mat-card-content class="searchIcon">
     <div>
       <button mat-raised-button class="searchFilter" (click)="searchShow()"><mat-icon>search</mat-icon></button>
-      <app-search *ngIf="isSearchShown"></app-search>
+      <app-search *ngIf="isSearchShown" [(ngModel)]="searchText"></app-search>
     </div>
 
     <mat-tree class="FilterTree" [dataSource]="dataSource" [treeControl]="treeControl">
 
       <mat-tree-node *matTreeNodeDef="let node">
-            <app-filterTreeItem [item]="node"></app-filterTreeItem>
+            <ul>
+              <li>
+                <app-filterTreeItem [item]="node | SearchPipe: searchText"></app-filterTreeItem>
+              </li>
+            </ul>
       </mat-tree-node>
 
     </mat-tree>
@@ -32,7 +36,7 @@
     <br />
   <h6> Ng2SearchPipe Library</h6>
   <ul>
-<!--    usin ng2SearchPipe library !!!-->
+<!--    using ng2SearchPipe library !!!-->
     <li *ngFor="let item of filterTreeItemArray | filter: searchText">
       <span><strong style="color:red">{{item.name}}</strong></span>
 
