--- a/src/app/components/filters/filter-tree/filter-tree.component.css
+++ b/src/app/components/filters/filter-tree/filter-tree.component.css
@@ -56,3 +56,10 @@ button.searchFilter {
 mat-tree-node{
   padding-left: 5px;
 }
+
+/*search width*/
+.customWidthWrapper {
+  width: 230px;
+  margin-left: 10px;
+  border: 1px solid #e0e0e0;
+}
