filter tree item implementing search function

--- a/src/app/pages/Page_4_FilterTree/page4.component.html
+++ b/src/app/pages/Page_4_FilterTree/page4.component.html
@@ -1,5 +1,5 @@
 <div id="customWidthWrapper">
-<app-filter-tree [items]=""></app-filter-tree>
+<app-filter-tree [items]="items"></app-filter-tree>
 
 </div>
 
