--- a/src/app/components/filters/topics/topics.component.html
+++ b/src/app/components/filters/topics/topics.component.html
@@ -12,7 +12,7 @@
     <mat-list>
 
       <!--                                    TODO style search component  !!!!!!!!!!-->
-        <app-search></app-search>
+        <cpmt-search></cpmt-search>
 
         <mat-grid-list cols="1" rowHeight="20px" gutterSize="5px">
 
