--- a/src/app/pages/Page_1_ArticleDetails/page1.component.html
+++ b/src/app/pages/Page_1_ArticleDetails/page1.component.html
@@ -1,3 +1,3 @@
 <div id="customWidthWrapperPage1">
-  <app-article-details></app-article-details>
+  <cpmt-article-details></cpmt-article-details>
 </div>
